--- a/Student Bio Page.html
+++ b/Student Bio Page.html
@@ -5,12 +5,14 @@
 </head>
 <body>
 	<h1>Student Bio!</h1>
-	<H1> Bobby Angus</H1>
+	<H2> Bobby Angus</H2>
 	<img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/4/005/09f/078/0408833.jpg">
-	<p>My name is Bobby Angus. I live in Clifton NJ. I went to Saint Joseph's University in Philadelphia. </p>
+	<p>My name is Bobby Angus. I live in Clifton NJ. I went to <a href=" www.sju.edu "> Saint Joseph's University </a> in Philadelphia. </p>
 	<H1> Contact Info </H1>
-	<ol> <b> Email: </b> <a href="mailto@rwa4791@gmail.com"> Rwa4791@gmail.com </a> </ol>
-	<ol> <b>Github:</b> <a href="https://github.com/rwa4791/Roberts-Repository"> Rwa4791</a> </ol>
-	<ol> <b> Portfolio: </b> <a href="www.google.com"> Coming Soon </a> </ol>
+	<ul>
+	<li> <b> Email: </b> <a href="mailto@rwa4791@gmail.com"> Rwa4791@gmail.com </a> </li>
+	<li> <b>Github:</b> <a href="https://github.com/rwa4791/Roberts-Repository"> Rwa4791</a> </li>
+	<li> <b> Portfolio: </b> <a href="www.google.com"> Coming Soon </a> </li>
+	</ul>
 </body>
 </html>
